[gd_scene load_steps=8 format=3 uid="uid://b8ett6k8ij3cp"]

[ext_resource type="Script" path="res://scene/instruction/FlowControl/JumpInstruction.gd" id="1_nyewh"]
[ext_resource type="PackedScene" uid="uid://l3lvpw0vs5vw" path="res://scene/instruction/Base/BaseRow.tscn" id="2_tl7qf"]
[ext_resource type="PackedScene" uid="uid://pnn0iyl5fuil" path="res://scene/instruction/Base/BaseLine.tscn" id="3_47kmd"]
[ext_resource type="Script" path="res://scene/instruction/Base/ColorLabel.gd" id="4_ylkn3"]
[ext_resource type="PackedScene" uid="uid://bnxr1d310gk3l" path="res://scene/instruction/Base/BaseLineColor.tscn" id="5_ee7gt"]
[ext_resource type="PackedScene" uid="uid://cxkqo32fuxva3" path="res://scene/instruction/Base/TextInput.tscn" id="6_e77yg"]
[ext_resource type="PackedScene" uid="uid://cb6l6keyicm1c" path="res://scene/instruction/Base/SelectBox.tscn" id="7_n7anv"]

[node name="JumpInstruction" type="Panel"]
script = ExtResource("1_nyewh")

[node name="BaseRow" parent="." instance=ExtResource("2_tl7qf")]

[node name="BaseLine" parent="BaseRow" instance=ExtResource("3_47kmd")]

[node name="ColorLabel" type="Label" parent="BaseRow/BaseLine"]
offset_right = 40.0
offset_bottom = 23.0
text = "Jump"
script = ExtResource("4_ylkn3")

[node name="BaseLineColor" parent="BaseRow" instance=ExtResource("5_ee7gt")]

[node name="Label" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 26.0
text = "if"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput" parent="BaseRow/BaseLineColor" instance=ExtResource("6_e77yg")]
offset_left = 575.5
offset_top = 323.5
offset_right = 575.5
offset_bottom = 323.5

[node name="SelectBox" parent="BaseRow/BaseLineColor" instance=ExtResource("7_n7anv")]
offset_left = 575.5
offset_top = 323.5
offset_right = 583.5
offset_bottom = 331.5

[node name="TextInput2" parent="BaseRow/BaseLineColor" instance=ExtResource("6_e77yg")]
